# rulengd

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README  README.md  supervisord.conf
cmake/modules/: FindCMocka.cmake  FindClangFormat.cmake  FindJSON-C.cmake  FindLIBUBUS.cmake  FindLIBUCI.cmake  Findcppcheck.cmake  clang-format.cmake
docs/: functionspec.md  testspec.md  ubus.splash.md
docs/api/: uci.rulengd.md
gitlab-ci/: functional-test.sh  install-dependencies.sh  iopsys-supervisord.conf  setup.sh  unit-test.sh
schemas/uci/: rulengd.json
src/: main.c  ruleng.c  ruleng.h  ruleng_bus.h  ruleng_json.c  ruleng_json.h  ruleng_list.h  ruleng_model.c  ruleng_model.h  ruleng_rules.c  ruleng_rules.h  ruleng_ubus.c  utils.h
test/: CMakeLists.txt  functional_tests_json.c  model.json  ruleng-test-rules  ruleng_test_json.c  ruleng_test_uci.c  rulengd_test.c  rules
test/cmocka/: CMakeLists.txt  functional_tests_generic.c  functional_tests_json.c  functional_tests_uci.c  ruleng-test-rules  unit_tests_json.c  unit_tests_uci.c
test/cmocka/files/etc/: recipe_1.json
test/cmocka/files/etc/config/: ruleng-test-recipe
test/cmocka/template_obj/: CMakeLists.txt  template.c
test/data/: ruleng-test-rules  ruleng-test-uci
test/template_obj/: template.c
